recursion.lessons.recursion.tree.Tree.scala.error
Tree:8: error: not found: value steps
subtree(steps:Int, length:Double, angle:Double, shrink:Double) 
        ^