recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {

if (steps == 0 )     return
 
}

subtree(steps:Int, length:Double, angle:Double, shrink:Double)